implementando endpoint de adicionar grupo
